favicon normolize navigation

--- a/index.htm
+++ b/index.htm
@@ -22,6 +22,34 @@
 </head>
 
 <body>
+    <div class="wrapper">
+        <header>
+            <div class="contanier">
+                <a href="#" class="logo">Discover</a>
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="#">HOME</a>
+                        </li>
+                        <li>
+                            <a href="#">TOUR</a>
+                        </li>
+                        <li>
+                            <a href="#">HOTEL</a>
+                        </li>
+                        <li>
+                            <a href="#">CULINARY</a>
+                        </li>
+                        <li>
+                            <a href="#">CONTACT</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+    </div>
+
+
 
     <script src="./js/script.js"></script>
 </body>
