--- a/index.htm
+++ b/index.htm
@@ -19,6 +19,8 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/media.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 </head>
 
 <body>
@@ -27,6 +29,7 @@
             <div class="contanier">
                 <a href="#" class="logo">Discover</a>
                 <nav>
+                    <button class="mini-menu">Menu</button>
                     <ul>
                         <li>
                             <a href="#">HOME</a>
