new block home, adaptive block home

--- a/index.htm
+++ b/index.htm
@@ -50,6 +50,19 @@
                 </nav>
             </div>
         </header>
+        <section class="home">
+            <div class="contanier home-contanier">
+                <h1 class="home-title">Discover</h1>
+                <p class="home-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Repudiandae laborum, iure perspiciatis dolore perferendis nobis?
+                    Exercitationem beatae culpa optio fugiat consequuntur sunt similique quas incidunt corporis vero, 
+                    quo, blanditiis at.
+                </p>
+                <a class='home-link' href="#">
+                    Booking tour
+                </a>
+            </div>
+        </section>
     </div>
 
 
