new section favorable plus adaptive

--- a/index.htm
+++ b/index.htm
@@ -63,6 +63,63 @@
                 </a>
             </div>
         </section>
+        <section class="favorable">
+            <h2 class="section-title">favorable</h2>
+            <div class="contanier fav-contanier">
+                <article class="fav-item">
+                    <img class="fav-img" src="https://picsum.photos/id/10/600/600" alt=""/>
+                    <div class="fav-text">
+                        <h6>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, obcaecati.
+                        </h6>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur sit est ut ipsum velit molestiae, dicta rerum voluptate dolores 
+                            sequi totam illum sapiente non odit molestias voluptatem unde suscipit quae blanditiis cum temporibus officiis minima ex quo. 
+                            Laudantium dolore distinctio corporis! Aperiam sed illo nisi, iure perferendis inventore id laudantium?
+                        </p>
+                    </div>
+                </article>
+                <article class="fav-item">
+                    <img class="fav-img" src="https://picsum.photos/id/1006/600/600" alt=""/>
+                    <div class="fav-text">
+                        <h6>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, obcaecati.
+                        </h6>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur sit est ut ipsum velit molestiae, dicta rerum voluptate dolores 
+                            sequi totam illum sapiente non odit molestias voluptatem unde suscipit quae blanditiis cum temporibus officiis minima ex quo. 
+                            Laudantium dolore distinctio corporis! Aperiam sed illo nisi, iure perferendis inventore id laudantium?
+                        </p>
+                    </div>
+                </article>
+                <article class="fav-item">
+                    <img class="fav-img" src="https://picsum.photos/id/1015/600/600" alt=""/>
+                    <div class="fav-text">
+                        <h6>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, obcaecati.
+                        </h6>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur sit est ut ipsum velit molestiae, dicta rerum voluptate dolores 
+                            sequi totam illum sapiente non odit molestias voluptatem unde suscipit quae blanditiis cum temporibus officiis minima ex quo. 
+                            Laudantium dolore distinctio corporis! Aperiam sed illo nisi, iure perferendis inventore id laudantium?
+                        </p>
+                    </div>
+                </article>
+                <article class="fav-item">
+                    <img class="fav-img" src="https://picsum.photos/id/1018/600/600" alt=""/>
+                    <div class="fav-text">
+                        <h6>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, obcaecati.
+                        </h6>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur sit est ut ipsum velit molestiae, dicta rerum voluptate dolores 
+                            sequi totam illum sapiente non odit molestias voluptatem unde suscipit quae blanditiis cum temporibus officiis minima ex quo. 
+                            Laudantium dolore distinctio corporis! Aperiam sed illo nisi, iure perferendis inventore id laudantium?
+                        </p>
+                    </div>
+                </article>
+            </div>
+        </section>
     </div>
 
 
