--- a/index.htm
+++ b/index.htm
@@ -18,6 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,900;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" href="./css/slick.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/media.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
@@ -120,11 +121,85 @@
                 </article>
             </div>
         </section>
+        <section class="service">
+            <div class="service-slider">
+                <div class="slide">
+                    <img src="https://picsum.photos/id/1018/1200/620" alt=""/>
+                </div>
+                <div class="slide">
+                    <img src="https://picsum.photos/id/1015/1200/620" alt=""/>
+                </div>
+                <div class="slide">
+                    <img src="https://picsum.photos/id/1006/1200/620" alt=""/>
+                </div>
+                <div class="slide">
+                    <img src="https://picsum.photos/id/10/1200/620" alt=""/>
+                </div>
+            </div>
+            <div class="servise-block">
+                <h2 class="section-title">service</h2>
+                <div class="contanier service-contanier">
+                    <div class="service-item">
+                        <img src="./img/eat.jpg" alt=""/>
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                            Temporibus recusandae optio quae consequatur sint tempora modi eaque 
+                            quod quos expedita assumenda saepe, vero nisi veniam ex illum at ab 
+                            voluptate beatae ratione blanditiis, nulla voluptas similique quisquam? 
+                            Molestias quae architecto labore aliquid quas quia, 
+                            temporibus modi? Aut dolor velit facere? Nulla illo fugiat veritatis 
+                            eaque cumque quo quae sit ratione sapiente similique reiciendis illum odit, 
+                            ipsum possimus dolorem aspernatur. Non.
+                        </p>
+                    </div>
+                    <div class="service-item">
+                        <img src="./img/hotel.jpg" alt=""/>
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                            Temporibus recusandae optio quae consequatur sint tempora modi eaque 
+                            quod quos expedita assumenda saepe, vero nisi veniam ex illum at ab 
+                            voluptate beatae ratione blanditiis, nulla voluptas similique quisquam? 
+                            Molestias quae architecto labore aliquid quas quia, 
+                            temporibus modi? Aut dolor velit facere? Nulla illo fugiat veritatis 
+                            eaque cumque quo quae sit ratione sapiente similique reiciendis illum odit, 
+                            ipsum possimus dolorem aspernatur. Non.
+                        </p>
+                    </div>
+                    <div class="service-item">
+                        <img src="./img/beach.jpg" alt=""/>
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                            Temporibus recusandae optio quae consequatur sint tempora modi eaque 
+                            quod quos expedita assumenda saepe, vero nisi veniam ex illum at ab 
+                            voluptate beatae ratione blanditiis, nulla voluptas similique quisquam? 
+                            Molestias quae architecto labore aliquid quas quia, 
+                            temporibus modi? Aut dolor velit facere? Nulla illo fugiat veritatis 
+                            eaque cumque quo quae sit ratione sapiente similique reiciendis illum odit, 
+                            ipsum possimus dolorem aspernatur. Non.
+                        </p>
+                    </div>
+                    <div class="service-item">
+                        <img src="./img/bus.png" alt=""/>
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                            Temporibus recusandae optio quae consequatur sint tempora modi eaque 
+                            quod quos expedita assumenda saepe, vero nisi veniam ex illum at ab 
+                            voluptate beatae ratione blanditiis, nulla voluptas similique quisquam? 
+                            Molestias quae architecto labore aliquid quas quia, 
+                            temporibus modi? Aut dolor velit facere? Nulla illo fugiat veritatis 
+                            eaque cumque quo quae sit ratione sapiente similique reiciendis illum odit, 
+                            ipsum possimus dolorem aspernatur. Non.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 
 
 
     <script src="./js/script.js"></script>
+    <script src="./js/slick.min.js"></script>
 </body>
 
 </html>
