change pictures on png, new section tours with fotogallery plus adaptive

--- a/index.htm
+++ b/index.htm
@@ -19,6 +19,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="./css/slick.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/media.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
@@ -140,7 +141,7 @@
                 <h2 class="section-title">service</h2>
                 <div class="contanier service-contanier">
                     <div class="service-item">
-                        <img src="./img/eat.jpg" alt=""/>
+                        <img src="./img/ic-eat.png" alt=""/>
                         <p>
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                             Temporibus recusandae optio quae consequatur sint tempora modi eaque 
@@ -153,7 +154,7 @@
                         </p>
                     </div>
                     <div class="service-item">
-                        <img src="./img/hotel.jpg" alt=""/>
+                        <img src="./img/ic-hotel.png" alt=""/>
                         <p>
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                             Temporibus recusandae optio quae consequatur sint tempora modi eaque 
@@ -166,7 +167,7 @@
                         </p>
                     </div>
                     <div class="service-item">
-                        <img src="./img/beach.jpg" alt=""/>
+                        <img src="./img/ic-aa.png" alt=""/>
                         <p>
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                             Temporibus recusandae optio quae consequatur sint tempora modi eaque 
@@ -179,7 +180,7 @@
                         </p>
                     </div>
                     <div class="service-item">
-                        <img src="./img/bus.png" alt=""/>
+                        <img src="./img/ic-oto.png" alt=""/>
                         <p>
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                             Temporibus recusandae optio quae consequatur sint tempora modi eaque 
@@ -194,12 +195,55 @@
                 </div>
             </div>
         </section>
+        <section class="tours">
+            <h2 class="section-title">Tours</h2>
+            <div class="contanier tours-contanier">
+                <a data-fancybox="tour" href="https://picsum.photos/id/1018/1200/1200">
+                    <img src="https://picsum.photos/id/1018/270/215" alt="">
+                </a>
+                <a data-fancybox="tour" href="https://picsum.photos/id/1006/1200/1200">
+                    <img src="https://picsum.photos/id/1006/270/215" alt="">
+                </a>
+                <a data-fancybox="tour" href="https://picsum.photos/id/10/1200/1200">
+                    <img src="https://picsum.photos/id/10/270/215" alt="">
+                </a>
+                <a data-fancybox="tour" href="https://picsum.photos/id/100/1200/1200">
+                    <img src="https://picsum.photos/id/100/270/215" alt="">
+                </a>
+                <a data-fancybox="tour" href="https://picsum.photos/id/145/1200/1200">
+                    <img src="https://picsum.photos/id/145/270/215" alt="">
+                </a>
+                <a data-fancybox="tour" href="https://picsum.photos/id/500/1200/1200">
+                    <img src="https://picsum.photos/id/500/270/215" alt="">
+                </a>
+                <a data-fancybox="tour" href="https://picsum.photos/id/177/1200/1200">
+                    <img src="https://picsum.photos/id/177/270/215" alt="">
+                </a>
+                <a data-fancybox="tour" href="https://picsum.photos/id/400/1200/1200">
+                    <img src="https://picsum.photos/id/400/270/215" alt="">
+                </a>
+                <a data-fancybox="tour" href="https://picsum.photos/id/985/1200/1200">
+                    <img src="https://picsum.photos/id/985/270/215" alt="">
+                </a>
+                <a data-fancybox="tour" href="https://picsum.photos/id/300/1200/1200">
+                    <img src="https://picsum.photos/id/300/270/215" alt="">
+                </a>
+                <a data-fancybox="tour" href="https://picsum.photos/id/777/1200/1200">
+                    <img src="https://picsum.photos/id/777/270/215" alt="">
+                </a>
+                <a data-fancybox="tour" href="https://picsum.photos/id/77/1200/1200">
+                    <img src="https://picsum.photos/id/77/270/215" alt="">
+                </a>
+            </div>
+            <button class="more">See more</button>
+        </section>
     </div>
 
 
 
     <script src="./js/script.js"></script>
     <script src="./js/slick.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 </body>
 
 </html>
